# foodgram

./: README.md  docker-compose.debug.yml  docker-compose.production.yml  remove_docker.sh  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  bashscript_for_dockerfile.sh  pyproject.toml  requirements.txt  setup.cfg  ssetup.cfg
backend/data/: tags.csv
backend/src/: filters.py  renders.py  services.py
backend/src/apps/shopping_list/: apps.py
backend/src/config/: settings.py  urls.py
backend/src/favorites/: admin.py  apps.py  models.py
backend/src/favorites/migrations/: 0001_initial.py  0002_initial.py
backend/src/ingredients/: admin.py  apps.py  models.py
backend/src/ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_name.py
backend/src/recipes/: admin.py  models.py
backend/src/recipes/migrations/: 0001_initial.py  0002_recipe_author.py
backend/src/shopping_cart/: admin.py  models.py
backend/src/shopping_cart/migrations/: 0001_initial.py  0002_auto_20250108_0227.py
backend/src/subscriptions/: admin.py  models.py
backend/src/subscriptions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_subscription_user.py  0004_alter_subscription_user.py  0005_alter_subscription_user.py
backend/src/tags/: admin.py  models.py
backend/src/tags/migrations/: 0001_initial.py  0002_alter_tag_name.py
backend/src/templates/: redoc.html
backend/src/users/: admin.py  models.py  signals.py  validators.py
backend/src/users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_auto_20250111_0207.py
nginx/: Dockerfile  (+1 more)
(+22 files in other folders)
