[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evgeny Zhigarin <e.zhigarin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.3"
djangorestframework = "3.12.4"
djoser = "2.1.0"
pillow = "9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
