[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evgeny Zhigarin <e.zhigarin@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.3"
djoser = "2.1.0"
pillow = "9.0.0"
djangorestframework = "3.12.4"
drf-extra-fields = "^3.7.0"
shortuuid = "^1.0.13"
django-filter = "23.1"
django-debug-toolbar = "3.8.1"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
gunicorn = "20.1.0"
flake8 = "6.0.0"
flake8-isort = "6.0.0"
psycopg2-binary = "2.9.3"
faker = "^35.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
